--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,9 +18,8 @@ body {
     grid-template-areas: 
     "header"
     "content";
-    grid-template-rows: 10% 1fr;
-    grid-template-columns: 1fr;
-    grid-gap: 30px;
+    grid-template-rows: 60px 1fr;
+    grid-gap: 10px;
     height: 100vh;
 }
 
